syntax = "proto3";

option java_package = "org.parsa.grpcservicenode";
option java_outer_classname = "HelloProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
